--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
-const rulesMarkdown = `1. Don't talk about proprietary stuff.
-2. DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!
-3. If someone yells "parking lot!" or double ✌'s...the topic is over.
-4. Minimum 5 shares per stand-up.
-5. Only one person sharing at a time.
-6. The repos are OSS. No closed source...no rights reserved...no per-core seats...
-7. Stand-ups will go on as long as they have to unless Nate has to leave.
-8. If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.`;
 const f = (arg: number) => {
 	return (arg: number) => {}
 }
@@ -18,20 +10,19 @@ const f = (arg: number) => {
 <Layout title="Welcome to Astro.">
 	<div class="absolute bg-gradient-to-l from-[#f6d365] to-[#fda085] opacity-40 w-full h-full z-10">&nbsp;</div>
 	<main>
-		<h1 class="text-9xl">Welcome to <span class="text-gradient">OpenStandup</span></h1>
-		<article class="content prose lg:prose-xl">
-			{{ rulesMarkdown }}
+		<article className="card w-50">
+			<h1 class="text-9xl">Welcome to <span class="text-gradient">OpenStandup</span></h1>
+			<ol class="bg-clip-text bg-gradient-to-r from-[#f6d365] to-[#fda085] list-decimal text-3xl list-inside font-extrabold text-transparent mt-5">
+				<li>Don't talk about proprietary stuff.</li>
+				<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!</li>
+				<li>If someone yells "parking lot!" or double ✌'s...the topic is over.</li>
+				<li>Minimum 5 shares per stand-up.</li>
+				<li>Only one person sharing at a time.</li>
+				<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...</li>
+				<li>Stand-ups will go on as long as they have to unless Nate has to leave.</li>
+				<li>If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.</li>
+			</ol>
 		</article>
-		<ol class="bg-clip-text bg-gradient-to-r from-[#f6d365] to-[#fda085] list-decimal text-3xl list-inside font-extrabold text-transparent mt-5">
-			<li>Don't talk about proprietary stuff.</li>
-			<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!</li>
-			<li>If someone yells "parking lot!" or double ✌'s...the topic is over.</li>
-			<li>Minimum 5 shares per stand-up.</li>
-			<li>Only one person sharing at a time.</li>
-			<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...</li>
-			<li>Stand-ups will go on as long as they have to unless Nate has to leave.</li>
-			<li>If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.</li>
-		</ol>
 	</main>
 </Layout>
 
