--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,37 +8,36 @@ const f = (arg: number) => {
 ---
 
 <Layout title="Welcome to Astro.">
-	<div class="absolute bg-gradient-to-l from-[#f6d365] to-[#fda085] opacity-40 w-full h-full z-10">&nbsp;</div>
-	<main>
-		<article className="card w-50">
+	<div class="absolute inset-0 bg-gradient-to-tr from-transparent to-white opacity-10"></div>
+	<div class="absolute inset-0 bg-gradient-to-r from-transparent to-white opacity-10"></div>
+	<div class="absolute inset-0 bg-gradient-to-t from-transparent to-white opacity-10"></div>
+	<div class="relative bg-gradient-to-bl via-[#1e89a4] from-[#05699b] to-[#0a7cb5] w-full h-full">
+		<header>
 			<h1 class="text-9xl">Welcome to <span class="text-gradient">OpenStandup</span></h1>
-			<ol class="bg-clip-text bg-gradient-to-r from-[#f6d365] to-[#fda085] list-decimal text-3xl list-inside font-extrabold text-transparent mt-5">
-				<li>Don't talk about proprietary stuff.</li>
-				<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!</li>
-				<li>If someone yells "parking lot!" or double ✌'s...the topic is over.</li>
-				<li>Minimum 5 shares per stand-up.</li>
-				<li>Only one person sharing at a time.</li>
-				<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...</li>
-				<li>Stand-ups will go on as long as they have to unless Nate has to leave.</li>
-				<li>If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.</li>
-			</ol>
-		</article>
-	</main>
+		</header>
+		<main class="grid grid-cols-2">
+			<aside class="w-1/2">
+				<h2>Let's Get Started, give your update!</h2>
+			</aside>
+			<article class="container h-800 w-1/2 py-5 px-9 bg-white border-2 flex items-center justify-center">
+				<ol class="bg-clip-text bg-gradient-to-r from-[#f6d365] to-[#fda085] border-2 list-decimal text-3xl list-inside font-extrabold text-transparent mt-5">
+					<li>Don't talk about proprietary stuff.</li>
+					<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!</li>
+					<li>If someone yells "parking lot!" or double ✌'s...the topic is over.</li>
+					<li>Minimum 5 shares per stand-up.</li>
+					<li>Only one person sharing at a time.</li>
+					<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...</li>
+					<li>Stand-ups will go on as long as they have to unless Nate has to leave.</li>
+					<li>If this is your first time at standup, you <a href="https://www.ietf.org/rfc/rfc2119.txt" target="blank">SHOULD</a> share.</li>
+				</ol>
+			</article>
+		</main>
+	</div>
 </Layout>
 
 <style>
 	:root {
 		--astro-gradient: linear-gradient(0deg, #fff, #ccc);
-	}
-
-	main {
-		margin: 0 0 0 1em;
-		padding: 0 0 0 1em;
-		max-width: 90%;
-	}
-
-	body {
-		background-color: #000;
 	}
 
 	.text-gradient {
