--- a/src/pages/rules.astro
+++ b/src/pages/rules.astro
@@ -1,77 +1,33 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-
-const f = (arg: number) => {
-	return (arg: number) => {}
-}
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1 class="text-9xl">Welcome to <span class="text-gradient">OpenStandup</span></h1>
-		<article class="container h-800 w-1/2 py-5 px-9 bg-white border-[2px solid black] flex items-center justify-center">
-			<ol class="bg-clip-text bg-gradient-to-r from-[#f6d365] to-[#fda085] list-decimal text-3xl list-inside font-extrabold text-transparent mt-5">
-				<li>Don't talk about proprietary stuff.</li>
-				<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!</li>
-				<li>If someone yells "parking lot!" or double ✌'s...the topic is over.</li>
-				<li>Minimum 5 shares per stand-up.</li>
-				<li>Only one person sharing at a time.</li>
-				<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...</li>
-				<li>Stand-ups will go on as long as they have to unless Nate has to leave.</li>
-				<li>If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.</li>
-			</ol>
-		</article>
-	</main>
+	<div class="relative bg-gradient-to-bl via-[#1e89a4] from-[#05699b] to-[#0a7cb5] min-h-screen">
+		<header class="relative">
+			<img src="/images/openmicimg.png" alt="" class="absolute w-full h-full object-cover" />
+			<div class="cta-txt flex items-center p-16">
+				<h1 class="text-8xl font-bold z-10 w-[80%] bg-clip-text bg-gradient-to-b from-[#BA188C] to-[rgba(115,20,159,0.2)] text-transparent">Welcome to OpenStandup</h1>
+			</div>
+		</header>
+		<main class="flex items-center py-10 px-10 bg-[#3e0658]">
+			<aside class="basis-2/5">
+				<h2 class="text-pink-color text-2xl">Let's Get Started, give your update!</h2>
+			</aside>
+			<article class="basis-3/5 container bg-rules-bkg-color flex rounded-xl">
+				<h3>Rules</h3>
+				<ul class="w-full text-white list-decimal text-xl text-left list-inside font-semibold text-transparent m-5">
+					<li>Don't talk about proprietary stuff.
+					<li>DO NOT talk about corp/NDA/confidential/anything-that-might-get-you-in-legal-trouble stuff!
+					<li> If someone yells "parking lot!" or double ✌'s...the topic is over.
+					<li>Minimum 5 shares per stand-up.
+					<li>Only one person sharing at a time.
+					<li>The repos are OSS. No closed source...no rights reserved...no per-core seats...
+					<li></li>Stand-ups will go on as long as they have to unless Nate has to leave.
+					8. If this is your first time at standup, you **[SHOULD](https://www.ietf.org/rfc/rfc2119.txt)** share.
+				</ul>
+			</article>
+		</main>
+	</div>
+	
 </Layout>
-
-<style>
-	:root {
-		--astro-gradient: linear-gradient(0deg, #fff, #ccc);
-	}
-
-	.text-gradient {
-		font-weight: 900;
-		background-image: var(--astro-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 100% 200%;
-		background-position-y: 100%;
-		border-radius: 0.4rem;
-		opacity: 0.8;
-		animation: pulse 4s ease-in-out infinite;
-	}
-
-	@keyframes pulse {
-		0%,
-		100% {
-			background-position-y: 0%;
-		}
-		50% {
-			background-position-y: 80%;
-		}
-	}
-
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		background: #4f39fa;
-		padding: 1rem;
-		border-radius: 0.4rem;
-		color: var(--color-bg);
-	}
-
-	.instructions code {
-		font-size: 0.875em;
-		border: 0.1em solid var(--color-border);
-		border-radius: 4px;
-		padding: 0.15em 0.25em;
-	}
-
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
